5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1621_2926.log
== TEST (2019-04-01 19:13:11) 
-- CODE:
a=int(input("quantidade de açai:"))
b=int(input("quantidade de esfirras:"))
soma= a+b
print(soma)
-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:13:35) 
-- CODE:
a=int(input("quantidade de açai:"))
b=int(input("quantidade de esfirras:"))
soma= a+b
print(round(soma, 2))
-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:16:04) 
-- CODE:
a=int(input("quantidade de açai:"))
b=int(input("quantidade de esfirras:"))
açai = (24,0)
soma= (a+b)

print(round(soma, 2))
-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:16:25) 
-- CODE:
a=int(input("quantidade de açai:"))
b=int(input("quantidade de esfirras:"))


print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(soma, 2))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:16:59) 
-- CODE:
a= int(input("quantidade de açai:"))
b= int(input("quantidade de esfirras:"))


print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(soma, 2))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:17:08) 
-- CODE:
a= float(input("quantidade de açai:"))
b= float(input("quantidade de esfirras:"))


print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(soma, 2))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:17:28) 
-- CODE:
a= int(input("quantidade de açai: "))
b= int(input("quantidade de esfirras: "))


print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(soma, 2))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:18:38) 
-- CODE:
a= int(input("quantidade de açai em gramas: "))
b= int(input("quantidade de esfirras: "))
soma = (a+b)
print(round(soma, 2))
-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:20:21) 
-- CODE:
a= int(input("quantidade de açai em gramas: "))
b= int(input("quantidade de esfirras: "))

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:20:23) 
-- CODE:
a= int(input("quantidade de açai em gramas: "))
b= int(input("quantidade de esfirras: "))

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:20:33) 
-- CODE:
a= int(input("quantidade de açai em gramas: "))
b= int(input("quantidade de esfirras: "))

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:20:43) 
-- CODE:
a= float(input("quantidade de açai em gramas: "))
b= int(input("quantidade de esfirras: "))

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:20:48) 
-- CODE:
a= float(input("quantidade de açai em gramas: "))
b= float(input("quantidade de esfirras: "))

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:21:23) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))


-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:21:46) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
soma=(a+b)

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:22:06) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
soma=(a+b)
print(round(soma, 2))

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:22:28) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
soma=(a-b)
print(round(soma, 2))

-- OUTPUT:
503
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:26:53) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
soma=(a+b)
print(round(soma, 2))

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:26:56) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
soma=(a+b)
print(round(soma, 2))

-- EXECUTION TIME:
0.256678
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
505
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
674
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
971
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:27:50) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24,00
salgado = 3,00 
soma=(a+b)
print(round(soma, 2))

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:00) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24.00
salgado = 3.00 
soma=(a+b)
print(round(soma, 2))

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:32:06) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24.00
salgado = 3.00 
soma=(a+b)
print(round(soma, 2))

-- EXECUTION TIME:
0.197894
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
505
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
674
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
971
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:31) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24.00
salgado = 3.00 
soma=(a+b)
print(float(soma, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(float(soma, 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:14) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24.00
salgado = 3.00 
soma=(a+b)
print(round(soma, 2))

-- OUTPUT:
505
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:18) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24.00
salgado = 3.00 
soma=(a+b)
print(float(soma, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(float(soma, 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:52:19) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24.00
salgado = 3.00 
soma=(a+b)
print(float(soma, 2))

-- EXECUTION TIME:
0.158423
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2926/main.py", line 6, in <module>
    print(float(soma, 2))
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:53:03) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24.00
salgado = 3.00 
subtraçao=(a-b)
print(float(soma, 2))

-- EXECUTION TIME:
0.176498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2926/main.py", line 6, in <module>
    print(float(soma, 2))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:53:57) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24.00
salgado = 3.00 
preçofinal= (a-b)
print(float(preçofinal, 2))

-- EXECUTION TIME:
0.134064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2926/main.py", line 6, in <module>
    print(float(pre\xe7ofinal, 2))
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:54:00) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24.00
salgado = 3.00 
preçofinal= (a+b)
print(float(preçofinal, 2))

-- EXECUTION TIME:
0.139498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2926/main.py", line 6, in <module>
    print(float(pre\xe7ofinal, 2))
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:34:28) 
-- CODE:
a= int(input("quantidadegramas: "))
b= int(input("quantidadeesfirras: "))
açai = 24.00
salgado = 3.00
conversao+
preçofinal= 
print(float(preçofinal, 2))

-- ERROR:
File "XXXX", line 5
    conversao+
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
